# SLASHEM-Extended

./: .gitattributes  .gitignore  .travis.yml  Files  MODDERS PLEASE READ.txt  Makefile.in  PoleArms.txt  README.gtk  README.md  anh14.dif  compile-all.bat  configure  configure.ac  cthulu.txt  cursescomp.bat  cursescompall.bat  diff  history.txt  history2.txt  install.txt  magic.txt  make_anh.txt  modding.txt  parsexlog.pl  poly.txt  readme.s6  readme.txt  s330.txt  shk.rej  slamfaq.txt  sources.txt  strategy.txt  tmp.txt  todo.txt  xlog.readme
dat/: Abuser.d  Abuser.des  Acid.d  Acid.des  Act.d  Act.des  Acu.des  Aklyst.des  Alltech.des  Altmer.d  Altmer.des  Amazon.d  Amazon.des  Anachr.des  Arch.d  Arch.des  Artist.d  Artist.des  Assassin.d  Assassin.des  Astro.des  Augurer.d  Augurer.des  Barb.d  Barb.des  Bard.d  Bard.des  Binder.d  Binder.des  Bleeder.d  Bleeder.des  Bloodsee.d  Bloodsee.des  Bosmer.d  Bosmer.des  Bully.d  Bully.des  Butt.des  Camper.des  Carto.des  (+357 more)
dat/obsolete/: Darkelf.des  Dopp.des  Dwarf.des  Elf.des  Gnome.des  Hobbit.des  Lycn.des  quest.txt
doc/: 1-45.pl  101-125.pl  50-100.pl  Guidebook.mn  Guidebook.mn.rej  Guidebook.tex  Guidebook.tex.rej  Guidebook.txt  Guidebook.txt.rej  Makefile.in  dgn_comp.6  dgn_comp.txt  dlb.txt  farben.txt  lev_comp.6  lev_comp.txt  makefile  proxy.doc  recover.txt  slashem.6  slashem.txt  sources.txt  tmac.n  window.doc  zeichen.txt
doc/Attic/: guidebook.txt
doc/fr/: slashem.6
include/: ALFUNCS.H  ALGINIT.H  LOADFONT.H  align.h  amiconf.h  artifact.h  artilist.h  attk.h  attrib.h  color.h  config.h  config.hin  config1.h  date.h  decl.h  dgn_file.h  display.h  dlb.h  dungeon.h  edog.h  egyp.h  eleash.h  emin.h  engrave.h  epri.h  eshk.h  extern.h  extern.h.rej  file.h  flag.h  func_tab.h  global.h  hack.h  lev.h  macconf.h  macpopup.h  mactty.h  macwin.h  md5.h  mfndpos.h  (+58 more)
src/: Makefile.in  allmain.c  allmain.d  alloc.c  alloc.d  apply.c  apply.d  artifact.c  artifact.d  attrib.c  attrib.d  ball.c  ball.d  bones.c  bones.d  borg.c  borg.d  botl.c  botl.d  cmd.c  cmd.d  dbridge.c  dbridge.d  decl.c  decl.d  detect.c  detect.d  dig.c  dig.d  display.c  display.d  dlb.c  dlb.d  do.c  do.d  do_name.c  do_name.d  do_wear.c  do_wear.d  dog.c  (+187 more)
sys/amiga/: Makefile.agc  Makefile.ami  Makefile.ami.rej  NetHack.cnf  amidos.c  amidos.p  amimenu.c.orig  amimenu.c.rej  amirip.c  amisnd.c  amitty.c  amiwind.c  amiwind.p  cvtsnd.c  winami.c  winami.p  winmenu.c  winproto.h  winstr.c  xpm2iff.c
sys/atari/: tos.c
sys/autoconf/: Install.ac  Makefile.doc  Makefile.src  Makefile.top  Makefile.utl  acinclude.m4  autoconf.hin  bootstrap.sh  configure.ac  depend.in
sys/be/: bemain.c  bemain.c.orig  bemain.c.rej
sys/mac/: Files.r  History.html  Install.mpw  Install.mw  Install.mw.rej  Levels.make  MFiles.r  MPW.r  MRecover.r  MacHelp  MacHelp.rej  Macintosh.make  NHDeflts  NHrsrc.hqx.rej  NHrsrc.r  NHsound.r  NetHack.r  News  News.rej  README.txt  Recover.r  Sounds.r  dprintf.c  dprintf.c.orig  dprintf.c.rej  maccurs.c  maccurs.c.orig  maccurs.c.rej  macerrs.c  macerrs.c.orig  macerrs.c.rej  macfile.c  macfile.c.orig  macfile.c.rej  machelp.bh  macmain.c  macmain.c.orig  macmain.c.rej  macmenu.c  macmenu.c.orig  (+18 more)
sys/msdos/: 2xsai.c  2xsai.h  2xtest.c  Install.dos  Install.dos.orig  Install.dos.rej  Makefile.BC  Makefile.GCC  Makefile.GCC.orig  Makefile.GCC.rej  Makefile.MSC  Makefile.MSC.rej  Makefile.SC  alfuncs.h  alginit.h  alleg.cnf  alnames.h  anethack.fnt  anethack.txt  bmp2txt.c  idx2bmp.c  loadfont.h  msdos.c  msdos.c.orig  msdos.c.rej  msdoshlp.txt  msdoshlp.txt.orig  nethack.pif  ovlinit.c  pckeys.c  pctiles.c  pctiles.h  pcvideo.h  schema1.BC  schema2.BC  schema3.MSC.rej  setup.bat  tile2bin.c  txt2bmp.c  vidal2.c  (+4 more)
sys/os2/: Install.os2  Makefile.os2  Makefile.os2.rej  os2.c  setup.cmd
sys/share/: NetHack.cnf  dgn_comp.h  dgn_lex.c  dgn_yacc.c  ioctl.c  ioctl.d  lev_comp.h  lev_lex.c  lev_lex.c.orig  lev_lex.c.rej  lev_yacc.c  nhlan.c  pcmain.c  pcsys.c  pctty.c  pcunix.c  tclib.c  termcap  unixtty.c  unixtty.d  uudecode.c
sys/travis/: build.sh
sys/unix/: GNUmakefile  Install.unx  Makefile.dat.orig  Makefile.dat.rej  Makefile.doc  Makefile.doc.orig  Makefile.src  Makefile.src.orig  Makefile.src.rej  Makefile.top  Makefile.top.orig  Makefile.top.rej  Makefile.utl  Makefile.utl.orig  Makefile.utl.rej  depend.awk  depend.awk.orig  depend.awk.rej  travis.sh  unixmain.c  unixmain.c.orig  unixmain.c.rej  unixmain.d  unixres.c  unixres.d  unixunix.c  unixunix.c.orig  unixunix.c.rej  unixunix.d
sys/unixserver/: Makefile  Makefile.doc  Makefile.src  Makefile.top  Makefile.utl  makedepend.sh  setup.sh
sys/vms/: Install.vms  Install.vms.rej  Makefile.src  Makefile.src.rej  Makefile.utl  Makefile.utl.rej  vmsfiles.c  vmsmail.c  vmsmain.c  vmstty.c  vmsunix.c
sys/wince/: Install.ce  bootstrp.mak  cesetup.bat  cesound.c  defaults.nh  mhinput.c  mhmain.c  mhstatus.c  mksetup.bat  mswproc.c  pocketpc.vcp  slashem.inf  slashem.ini  winhack.c  winmain.c
sys/winnt/: Install.gcc  Install.gnu-win32  Install.nt  Install.nt.orig  Install.nt.rej  Makefile.bcc  Makefile.cygwin  Makefile.g32  Makefile.gcc  Makefile.msc  Makefile.nt  Makefile.nt.orig  Makefile.nt.rej  cc-pkg.c  console.rc  cursmake.gcc  defaults.nh  mapimail.c  nh340key.c  nhdefkey.c  nhraykey.c  nhsetup.bat  ntsound.c  nttty.c  nttty.c.orig  seico.uu  setup.bat  slashem.rc  win32api.h  winnt.c  winnt.c.orig  winnt.cnf
util/: Makefile.in  dgn_comp.d  dgn_comp.l  dgn_comp.y  dgn_lex.d  dgn_lex.l  dgn_main.c  dgn_main.d  dgn_yacc.d  dlb.c  dlb.d  dlb_main.c  dlb_main.c.orig  dlb_main.d  lev_comp.d  lev_comp.l  lev_comp.y  lev_lex.d  lev_lex.l  lev_main.c  lev_main.c.orig  lev_main.d  lev_yacc.d  makedefs.c  makedefs.c.orig  makedefs.d  panic.c  panic.d  recover.c  recover.d  recover_main.c  version.sh
win/Qt/: Install.Qt  Install.Qt.orig  Install.Qt.rej  kse-mini.xpm  kse.xpm  kslashem.lnk  qt_win.cpp  qt_win.cpp.orig  qt_win.cpp.rej  qttableview.cpp  tileedit.cpp
win/X11/: Install.X11  SlashEM.ad  Window.c  slashem.rc  tile2x11.c  tile2x11.c.orig  winX.c  (+10 more)
(+227 files in other folders)
